--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
     <body>
 
         <header>
-            <section class="container">
-                <h1>Agence développement et communication digitale </h1>
+            <section class="container"></section>
+                <section id="logo"></section>
+                <section id="nav-menu"></section>
             </section>
+            <section class="container">
+                <section id="presentation">
+                    <p>Agence web à Vannes</p>
+                    <h1>Seaview réalise votre <div class="color_text">communication digitale</div></h1>
+                </section>
+                <section id="image-accueil">
+                    <img src="" alt="">
+                </section>
+            </section>
+            
         </header>
 
         <section class="container">
-            <section id="presentation">
-                <p>Agence web à Vannes</p>
-                <h3>Seaview réalise votre <div class="color_text">communication digitale</div></h3>
-            </section>
-            <h2>Notre équipe</h2>
+            <h2>Bienvenue chez Seaview,</h2>
+            <p>[à compléter]</p>
+            <h2 class="align_center">Notre équipe</h2>
             <section id="notre_equipe">
                 
             </section>
