change_list_into_buttons

--- a/index.html
+++ b/index.html
@@ -48,11 +48,15 @@
         <section class="container">
             <h2>Nos services</h2>
             <section id="services">
-                <dl id="list_services">
+                <!-- <dl id="list_services">
                     
-                </dl>
+                </dl> -->
+                <section id="list_services">
+
+                </section>
                 <section id="div_mockup">
-                    <img src="" alt="">
+                    <section id="paragraphe_service"></section>
+                    <img id="image_mockup" src="" alt="">
                 </section>
             </section>
         </section>
