--- a/index.html
+++ b/index.html
@@ -60,7 +60,34 @@
                 </section>
             </section>
         </section>
-
+<section>
+    <section>
+          <h1>Formulaire de Devis - Entreprise de Communication</h1>
+          <form id="devisForm">
+            <div class="input-group">
+              <label for="nom">Nom :</label>
+              <input type="text" id="nom" name="nom" required>
+            </div>
+            <div class="input-group">
+              <label for="email">Email :</label>
+              <input type="email" id="email" name="email" required>
+            </div>
+            <div class="input-group">
+              <label for="telephone">Téléphone :</label>
+              <input type="tel" id="telephone" name="telephone" required>
+            </div>
+            <div class="input-group">
+              <label for="description">Description des besoins :</label>
+              <textarea id="description" name="description" rows="4" required></textarea>
+            </div>
+            <div class="input-group">
+              <label for="budget">Budget prévu :</label>
+              <input type="number" id="budget" name="budget" required>
+            </div>
+            <button type="submit">Envoyer</button>
+          </form>
+          
+</section>
 
 
         <script src="https://website-widgets.pages.dev/dist/sienna.min.js" defer></script>
