--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                 <label for="nom">Nom :</label>
                 <input type="text" id="nom" name="nom" required>
               </div>
+              <div class="input-group">
+                <label for="prenom">Prenom :</label>
+                <input type="text" id="prenom" name="prenom" required>
+              </div>
           <div class="input-group">
             <label for="nomSociete">Nom de la Société :</label>
             <input type="text" id="nomSociete" name="nomSociete" required>
