--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <label for="pieceJointe">Pièce Jointe :</label>
             <input type="file" id="pieceJointe" name="pieceJointe" accept=".pdf,.doc,.docx,.txt" >
           </div>
-          <button type="submit">Envoyer</button>
+          <button classe="btn" type="submit">Envoyer</button>
         </form>
           
 </section>
