--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         </section>
 
         <section class="container">
-            <h2>Formulaire de Devis - Entreprise de Communication</h2>
-            <form id="devisForm" enctype="multipart/form-data">
+            <h2>Formulaire de Devis </h2>
+            <form action="seaview.php" method="POST">
                 <div class="input-group">
                     <label for="nom">Nom :</label>
                     <input type="text" id="nom" name="nom" required>
@@ -88,12 +88,13 @@
                     <label for="pieceJointe">Pièce Jointe :</label>
                     <input type="file" id="pieceJointe" name="pieceJointe" accept=".pdf,.doc,.docx,.txt">
                 </div>
-                <button type="submit">Envoyer</button>
+                <button type="btn">Envoyer</button>
             </form>      
         </section>
 
 
         <script src="https://website-widgets.pages.dev/dist/sienna.min.js" defer></script>
         <script src="js/script.js"></script>
+        
     </body>
 </html>
