--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h1>Seaview réalise votre <div class="color_text">communication digitale</div></h1>
                 </section>
                 <section id="image-accueil">
-                    <img src="" alt="">
+                    <img src="assets/images/illustration_header.png" alt="Illustration agence Seaview">
                 </section>
             </section>
             
@@ -63,6 +63,7 @@
                 </section>
                 <section class="bienvenue-entreprise-img">
                     <img src="assets/images/golfe.jpg" alt="Golfe du Morbihan, Vannes">
+                    <div class="bulle_text"><p>Refonte et conception web à Vannes</p></div>
                 </section>
             </section>
         </section>
