added_title_fonts

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
         <section class="container">
-            <h2 class="align_center">Notre équipe</h2>
+            <h2>Notre équipe</h2>
             <section id="notre_equipe">       
             </section>
         </section>
@@ -92,7 +92,7 @@
         </section>
 
         <section class="container">
-            <h2 class="align_center">Témoignages</h2>
+            <h2>Témoignages</h2>
             <section id="temoignages">       
             </section>
         </section>
@@ -176,7 +176,7 @@
         </section>
 
         <footer>
-            <section id="footer_horaires">
+            <section class="footer_section footer_horaires">
                 <section class="horaires-jours">
                     <p>Lundi:</p> 
                     <p>Mardi:</p>
@@ -197,12 +197,12 @@
                     <p>Fermé</p>
                 </section>
             </section>
-            <section id="footer_cordonnees">
+            <section class="footer_section footer_cordonnees">
                 <address>1 rue Marie Curie, <br>56890 PLESCOP</address>
                         <p id="telephone">02 02 02 02 02</p>
                         <a href="" id="mail">contact@seaview.com</a>
             </section>
-            <section id="footer_nav">
+            <section class="footer_section footer_nav">
                 <nav id="nav_footer">
                     <ul id="list_menu_footer">
                         <li class="nav_footer_elem">
