--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <input type="file" id="pieceJointe" name="pieceJointe" accept=".pdf,.doc,.docx,.txt">
                         </div>
                         <div class="input-group">
-                            <p><input type="checkbox" id="confidentialite" name="confidentialite" required>J'ai lu et j'accepte votre <a href="#confidentialite.html">politique de confidentialité</a> <strong class="form-required">*</strong></p>
+                            <p><input type="checkbox" id="confidentialite" name="confidentialite" required>J'ai lu et j'accepte votre <a href="confidentialite.html" target="_blank">politique de confidentialité</a> <strong class="form-required">*</strong></p>
                         </div>
                         <button type="submit">Envoyer</button>
                     </form>
@@ -206,13 +206,13 @@
                 <nav id="nav_footer">
                     <ul id="list_menu_footer">
                         <li class="nav_footer_elem">
-                            <a href="#mentions_legales.html">Mentions légales</a>
+                            <a href="mentions_legales.html" target="_blank">Mentions légales</a>
                         </li>
                         <li class="nav_footer_elem">
-                            <a href="#confidentialite.html">Politique de confidentialité</a>
+                            <a href="confidentialite.html" target="_blank">Politique de confidentialité</a>
                         </li>
                         <li class="nav_footer_elem">
-                            <a href="#cgu.html">Conditions générales d'utilisation</a>
+                            <a href="cgu.html" target="_blank">Conditions générales d'utilisation</a>
                         </li>
                     </ul>
                 </nav>
