--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
                         <p>Agence web à Vannes</p>
                         <h1>Seaview réalise votre <br>communication digitale</h1>
                     </section>
-                    <section id="image-accueil">
-                        <img src="assets/images/illustration_header.png" alt="Illustration agence Seaview" />
-                    </section>
+                    <img id="image-accueil" src="assets/images/illustration-header.svg" alt="Illustration agence Seaview" />
+                    
                 </section>
             </section>
             
@@ -74,7 +73,7 @@
 
 
         <section class="container">
-            <h2>Notre équipe</h2>
+            <h2 class="add_space">Notre équipe</h2>
             <section id="notre_equipe">       
             </section>
         </section>
@@ -92,7 +91,7 @@
         </section>
 
         <section class="container">
-            <h2>Témoignages</h2>
+            <h2 class="add_space">Témoignages</h2>
             <section id="temoignages">       
             </section>
         </section>
