--- a/confidentialite.html
+++ b/confidentialite.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Seaview - Agence web</title>
+        <title>Politique de confidentialité - Seaview - Agence web</title>
         <link rel="stylesheet" href="scss/style.css" />
     </head>
     <body>
 
         <section class="container">
-            <h1>Politique de confidentialité</h1>
+            <h2>Politique de confidentialité</h2>
             <p>Le site web https://seaview-agence-web.com est détenu par Seaview - Agence web, 
                 qui est un contrôleur de données de vos données personnelles. <br><br>
                 Nous avons adopté cette politique de confidentialité, qui détermine la manière 
@@ -20,7 +20,7 @@
                 Nous prenons soin de vos données personnelles et nous nous engageons à en 
                 garantir la confidentialité et la sécurité.
             </p>
-            <h3>Les informations personnelles que nous collectons :</h3>
+            <h2>Les informations personnelles que nous collectons :</h2>
             <p>Lorsque vous visitez le https://seaview-agence-web.com, nous recueillons automatiquement 
                 certaines informations sur votre appareil, notamment des informations sur votre navigateur 
                 web, votre adresse IP, votre fuseau horaire et certains des cookies installés sur votre appareil. 
@@ -29,10 +29,10 @@
                 la manière dont vous interagissez avec le site. Nous désignons ces informations collectées 
                 automatiquement par le terme "informations sur les appareils". En outre, nous pourrions 
                 collecter les données personnelles que vous nous fournissez (y compris, mais sans s'y limiter, votre nom, 
-                votre prénom, le nom de votre sociét", votre adresse email, etc.) lors de la demande de devis afin de 
+                votre prénom, le nom de votre société, votre adresse email, etc.) lors de la demande de devis afin de 
                 pouvoir exécuter le contrat.
             </p>
-            <h3>Pourquoi traitons-nous vos données ?</h3>
+            <h2>Pourquoi traitons-nous vos données ?</h2>
             <p>Notre priorité absolue est la sécurité des données des clients et, à ce titre, 
                 nous ne pouvons traiter que des données minimales sur les utilisateurs, 
                 uniquement dans la mesure où cela est absolument nécessaire pour maintenir 
@@ -50,7 +50,7 @@
                 notre bulletin d'information ou nous contacter directement à partir du site web. 
                 Les utilisateurs qui ne savent pas quelles informations sont obligatoires sont invités à nous contacter via contact@seaview.com.
             </p>
-            <h3>Vos droits :</h3>
+            <h2>Vos droits :</h2>
             <p>Si vous êtes un résident européen, vous disposez des droits suivants liés à vos données personnelles :</p>
             <ul>
                 <li>Le droit d'être informé.</li>
@@ -66,16 +66,16 @@
             <a href="">contact@seaview.com</a><br><br>
             En outre, si vous êtes un résident européen, nous notons que nous traitons vos informations afin d'exécuter les contrats que nous pourrions avoir avec vous (par exemple, si vous passez une commande par le biais du site), ou autrement pour poursuivre nos intérêts commerciaux légitimes énumérés ci-dessus. En outre, veuillez noter que vos informations pourraient être transférées en dehors de l'Europe, y compris au Canada et aux États-Unis.
             </p>
-            <h3>Liens vers d'autres sites web :</h3>
+            <h2>Liens vers d'autres sites web :</h2>
             <p>Notre site web peut contenir des liens vers d'autres sites web qui ne sont pas détenus ou contrôlés par nous. Sachez que nous ne sommes pas responsables de ces autres sites web ou des pratiques de confidentialité des tiers. Nous vous encourageons à être attentif lorsque vous quittez notre site web et à lire les déclarations de confidentialité de chaque site web susceptible de collecter des informations personnelles.
             </p>
-            <h3>Sécurité de l'information :</h3>
+            <h2>Sécurité de l'information :</h2>
             <p>Nous sécurisons les informations que vous fournissez sur des serveurs informatiques dans un environnement contrôlé et sécurisé, protégé contre tout accès, utilisation ou divulgation non autorisés. Nous conservons des garanties administratives, techniques et physiques raisonnables pour nous protéger contre tout accès, utilisation, modification et divulgation non autorisés des données personnelles sous son contrôle et sa garde. Toutefois, aucune transmission de données sur Internet ou sur un réseau sans fil ne peut être garantie.
             </p>
-            <h3>Divulgation légale :</h3>
+            <h2>Divulgation légale :</h2>
             <p>Nous divulguerons toute information que nous collectons, utilisons ou recevons si la loi l'exige ou l'autorise, par exemple pour nous conformer à une citation à comparaître ou à une procédure judiciaire similaire, et lorsque nous pensons de bonne foi que la divulgation est nécessaire pour protéger nos droits, votre sécurité ou celle d'autrui, enquêter sur une fraude ou répondre à une demande du gouvernement.
             </p>
-            <h3>Informations de contact :</h3>
+            <h2>Informations de contact :</h2>
             <p>Si vous souhaitez nous contacter pour comprendre davantage la présente politique ou si vous souhaitez nous contacter concernant toute question relative aux droits individuels et à vos informations personnelles, vous pouvez envoyer un courriel à <a href="">contact@seaview.com</a>.</p>
             
         </section>
@@ -111,13 +111,13 @@
                 <nav id="nav_footer">
                     <ul id="list_menu_footer">
                         <li class="nav_footer_elem">
-                            <a href="#mentions_legales.html">Mentions légales</a>
+                            <a href="mentions_legales.html">Mentions légales</a>
                         </li>
                         <li class="nav_footer_elem">
-                            <a href="#confidentialite.html">Politique de confidentialité</a>
+                            <a href="confidentialite.html">Politique de confidentialité</a>
                         </li>
                         <li class="nav_footer_elem">
-                            <a href="#cgu.html">Conditions générales d'utilisation</a>
+                            <a href="cgu.html">Conditions générales d'utilisation</a>
                         </li>
                     </ul>
                 </nav>
