add_link_to_return

--- a/confidentialite.html
+++ b/confidentialite.html
@@ -9,6 +9,7 @@
     <body>
 
         <section class="container">
+            <a href="index.html">Retour au site</a>
             <h2>Politique de confidentialité</h2>
             <p>Le site web https://seaview-agence-web.com est détenu par Seaview - Agence web, 
                 qui est un contrôleur de données de vos données personnelles. <br><br>
