--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -9,6 +9,7 @@
     <body>
 
         <section class="container">
+            <a href="index.html">Retour au site</a>
             <h2>Mentions légales</h2>
             
             <h2>Définitions</h2>
