--- a/cgu.html
+++ b/cgu.html
@@ -9,6 +9,7 @@
     <body>
 
         <section class="container">
+            <a href="index.html">Retour au site</a>
             <h2>Conditions générales d'utilisation</h2>
 
 
